--- a/Files/mobile.css
+++ b/Files/mobile.css
@@ -1,18 +1,52 @@
 /* For Mobile  */
-@media only screen and (max-width: 480px) {
-     .container {
-          width: 100% !important;
-     }
+.navbar {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     flex-wrap: wrap;
+}
 
-     .content {
-          padding: 0 !important;
-     }
+.main-content {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     flex-wrap: wrap;
+}
 
-     .content-wrap {
-          padding: 10px !important;
-     }
+.about-content {
+     display: flex;
+     flex-direction: row;
+     align-items: column;
+     flex-wrap: wrap;
+     height: 292vh;
+}
 
-     .invoice {
-          width: 100% !important;
-     }
+.journey-content {
+     display: flex;
+     flex-direction: row;
+     align-items: column;
+     flex-wrap: wrap;
+     height: 294vh;
+}
+
+.gallery-content {
+     display: flex;
+     flex-direction: row;
+     align-items: column;
+     flex-wrap: wrap;
+     height: 326vh;
+}
+
+.about-developer {
+     display: flex;
+     flex-direction: row;
+     align-items: column;
+     flex-wrap: wrap;
+
+}
+
+.foot {
+    display: flex;
+    justify-content: center;
+     
 }
