--- a/Files/LoginPage/style.css
+++ b/Files/LoginPage/style.css
@@ -58,25 +58,38 @@
 
 .ifield {
      width: 100%;
-     border: .1px solid black;
      border-radius: 15px;
      padding: 10px;
      background: transparent;
      margin: 10px 0;
+
+     outline: none;
+     box-shadow: 1px 1px 5px 0 black;
+     border: none;
 }
 
 .btn {
+     /* box-shadow: 1px 1px 5px 0 black; */
      width: 100%;
-     border: .1px solid black;
-     border-radius: 5px;
+     border-radius: 10px;
      padding: 10px;
      margin: 10px 0;
+     /* background:  linear-gradient(rgba(255, 0, 0, 0.511), rgba(255, 255, 0, 0.634)); */
      background: transparent;
      cursor: pointer;
+
+     outline: none;
+     border: none;
+     box-shadow: 1px 1px 5px 0 black;
+
 }
 
 .btn:hover {
-     background-color: #e1e1e1;
+     background:  linear-gradient(rgba(255, 200, 0, 0.884), rgba(223, 200, 52, 0.916));
+     /* box-shadow: none; */
+     box-shadow: 1px 1px 5px 0 black;
+
+
 }
 
 .exttext {
