--- a/Files/SimpleFolio/style.css
+++ b/Files/SimpleFolio/style.css
@@ -9,8 +9,11 @@ body {
      background-color: #f6f4f4;
 }
 
+/* Navbar */
+
 nav {
      background-color: #fff;
+     border: 2px solid #c12424;
      height: 80px;
      width: 100%;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -25,8 +28,15 @@ nav .logo {
      float: left;
 }
 
-nav .logo h4 {
-     text-shadow: 1px 1px 15px #000000;
+nav .logo a {
+     text-decoration: none;
+     color: #000;
+}
+
+nav .logo a:hover {
+     color: rgb(0, 153, 255);
+     transition: 0.5s;
+     text-shadow: 1px 1px 20px #000000;
 }
 
 nav .links {
@@ -55,8 +65,11 @@ nav .links li a:hover {
      color: rgb(0, 153, 255);
 }
 
+/* Intro */
+
 .intro {
      background-image: url(../images/hero.jpg);
+     border: 2px solid #237d0c;
      background-size: cover;
      background-position: center;
      height: 100vh;
@@ -95,15 +108,32 @@ nav .links li a:hover {
      color: rgb(0, 153, 255);
      font-size: 45px;
      font-weight: 600;
-     text-shadow: 1px 1px 25px #000000;
+     -webkit-text-stroke: 0.3bw #383d52;
+     text-transform: uppercase;
 }
+
+.name {
+     color: black;
+     font-size: 45px;
+     font-weight: 600;
+}
+
+/* Name hover animation */
+.name:hover {
+     color: rgb(0, 153, 255);
+     transition: all 0.3s ease-in;
+     text-shadow: 1px 1px black;
+}
+
+/* Experience */
 
 .experience {
      background-image: url(../images/hero.jpg);
+     border: 2px solid #3d0ae6;
      background-size: cover;
      background-position: center;
      width: 100%;
-     height: 100vh;
+     height: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
@@ -111,6 +141,7 @@ nav .links li a:hover {
 }
 
 .experience-item {
+     background-color: #fff;
      width: 80%;
      height: 100%;
      display: flex;
@@ -119,11 +150,14 @@ nav .links li a:hover {
      flex-direction: column;
      padding: 20px;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-     margin: 20px;
+     margin: 15px;
 }
+
+/* Projects */
 
 .projects {
      background-image: url(../images/hero.jpg);
+     border: 2px solid #c12424;
      background-size: cover;
      background-position: center;
      width: 100%;
@@ -142,7 +176,7 @@ nav .links li a:hover {
      flex-direction: row;
      padding: 20px;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-     margin: 20px;
+     margin: 15px;
 }
 
 .left {
@@ -228,8 +262,11 @@ nav .links li a:hover {
      border: none;
 }
 
+/* Techstacks */
+
 .stacks {
      background-image: url(../images/hero.jpg);
+     border: 2px solid #738409;
      background-size: cover;
      background-position: center;
      width: 100%;
@@ -277,8 +314,11 @@ nav .links li a:hover {
      border-top: 3px solid black;
 }
 
+/* Contact Us */
+
 .contact {
      background-image: url(../images/hero.jpg);
+     border: 2px solid #c12424;
      background-size: cover;
      background-position: center;
      width: 100%;
@@ -342,4 +382,12 @@ nav .links li a:hover {
 
 .btns {
      margin: 20px;
+}
+
+.line {
+     width: 5%;
+     height: 5px;
+     background-color: rgb(3, 68, 197);
+     /* margin: 20px; */
+
 }
