--- a/Files/SimpleFolio/style.css
+++ b/Files/SimpleFolio/style.css
@@ -13,7 +13,6 @@ body {
 
 nav {
      background-color: #fff;
-     border: 2px solid #c12424;
      height: 80px;
      width: 100%;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -69,7 +68,6 @@ nav .links li a:hover {
 
 .intro {
      background-image: url(../images/hero.jpg);
-     border: 2px solid #237d0c;
      background-size: cover;
      background-position: center;
      height: 100vh;
@@ -129,11 +127,9 @@ nav .links li a:hover {
 
 .experience {
      background-image: url(../images/hero.jpg);
-     border: 2px solid #3d0ae6;
      background-size: cover;
      background-position: center;
      width: 100%;
-     height: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
@@ -143,6 +139,7 @@ nav .links li a:hover {
 .experience-item {
      background-color: #fff;
      width: 80%;
+     border-radius: 20px;
      height: 100%;
      display: flex;
      justify-content: center;
@@ -150,14 +147,44 @@ nav .links li a:hover {
      flex-direction: column;
      padding: 20px;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-     margin: 15px;
+     margin: 10px;
+}
+
+.experience-item h3 {
+     color: rgb(0, 153, 255);
+     font-size: 26px;
+     font-weight: 600;
+     text-transform: uppercase;
+     letter-spacing: 1px;
+}
+
+h2 {
+     color: rgb(0, 153, 255);
+     font-size: 35px;
+     font-weight: 600;
+     text-transform: uppercase;
+     letter-spacing: 1px;
+}
+
+.experience-item h4 {
+     color: #000;
+     font-size: 20px;
+     font-weight: 500;
+     font-weight: bold;
+     letter-spacing: 1px;
+     margin-bottom: 20px;
+}
+
+.experience-item p {
+     color: #000;
+     font-size: 18px;
+     margin: 2px;
 }
 
 /* Projects */
 
 .projects {
      background-image: url(../images/hero.jpg);
-     border: 2px solid #c12424;
      background-size: cover;
      background-position: center;
      width: 100%;
@@ -170,11 +197,13 @@ nav .links li a:hover {
 .project-item {
      width: 80%;
      height: 100%;
+     background-color: #fff;
+     border-radius: 20px;
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: row;
-     padding: 20px;
+     padding: 15px;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
      margin: 15px;
 }
@@ -199,7 +228,6 @@ nav .links li a:hover {
      align-items: center;
      flex-direction: column;
      padding: 20px;
-     margin: 20px;
 }
 
 .right h3 {
@@ -236,6 +264,7 @@ nav .links li a:hover {
      letter-spacing: 1px;
      margin: 10px;
      outline: none;
+     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .btn2 {
@@ -266,7 +295,6 @@ nav .links li a:hover {
 
 .stacks {
      background-image: url(../images/hero.jpg);
-     border: 2px solid #738409;
      background-size: cover;
      background-position: center;
      width: 100%;
@@ -303,7 +331,6 @@ nav .links li a:hover {
      width: 50px;
      height: 50px;
      object-fit: cover;
-     border-radius: 15px;
      margin: 10px;
 }
 
@@ -318,76 +345,66 @@ nav .links li a:hover {
 
 .contact {
      background-image: url(../images/hero.jpg);
-     border: 2px solid #c12424;
-     background-size: cover;
-     background-position: center;
-     width: 100%;
-     height: 100vh;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     flex-direction: column;
-}
-
-.contact-item {
-     background-image: url(../images/hero.jpg);
      background-size: cover;
      background-position: center;
      width: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
-     flex-direction: row;
-}
-
-.left2 {
-     width: 50%;
-     height: 100%;
-
-     padding: 20px;
-     margin: 20px;
-}
-
-.left2 img {
-     width: 100%;
-     height: 100%;
-     object-fit: cover;
-     border-radius: 15px;
-}
-
-.right2 {
-     width: 50%;
-     height: 100%;
-     display: flex;
-     justify-content: center;
-     align-items: center;
      flex-direction: column;
+     margin-top: 25px;
+}
+
+
+.getintouch {
      padding: 20px;
-     margin: 20px;
 }
 
-.right2 h3 {
-     color: rgb(0, 153, 255);
-     font-size: 35px;
-     font-weight: 600;
-     text-shadow: 1px 1px 25px #000000;
+.iconbtn {
+     padding: 10px;
+     width: 100px;
+     height: 100px;
+     text-decoration: none;
+     font-size: 30px;
+     background-color: black;
+     color: white;
+     margin: 10px;
+     border-radius: 20%;
+     outline: none;
+     border: none;
+
 }
 
-.right2 p {
-     color: #000;
-     font-size: 20px;
-     font-weight: 500;
-     text-shadow: 1px 1px 25px #000000;
-}
-
-.btns {
-     margin: 20px;
+.iconbtn:hover {
+     background-color: rgb(0, 153, 255);
+     color: white;
+     transition: all 0.3s ease-in;
+     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+     outline: none;
+     border: none;
 }
 
 .line {
      width: 5%;
      height: 5px;
      background-color: rgb(3, 68, 197);
-     /* margin: 20px; */
+     margin-bottom: 20px;
 
 }
+
+footer {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding: 10px;
+}
+
+footer p {
+     font-size: 15px;
+     font-weight: 500;
+     text-shadow: 1px 1px 25px #000000;
+}
+
+
+/* Media Query */
