--- a/Files/SimpleFolio/style.css
+++ b/Files/SimpleFolio/style.css
@@ -7,6 +7,7 @@
 body {
      font-family: 'Poppins', sans-serif;
      background-color: #f6f4f4;
+     min-width: 960px;
 }
 
 /* Navbar */
@@ -405,6 +406,3 @@ footer p {
      font-weight: 500;
      text-shadow: 1px 1px 25px #000000;
 }
-
-
-/* Media Query */
