body  before added

--- a/Files/SimpleFolio/style.css
+++ b/Files/SimpleFolio/style.css
@@ -4,23 +4,34 @@
      box-sizing: border-box;
 }
 
+/* Body before background */
+body:before {
+     content: "";
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     background: url("images/back.jpg") no-repeat center center fixed;
+     background-size: cover;
+     z-index: -1;
+}
+
 body {
      font-family: 'Poppins', sans-serif;
-     background-color: #f6f4f4;
      min-width: 1180px;
 }
 
 /* Navbar */
 
 nav {
-     background-color: #fff;
+     backdrop-filter: blur(10px);
      height: 80px;
      width: 100%;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 nav .logo {
-     color: #000;
      font-size: 30px;
      font-weight: 600;
      line-height: 80px;
@@ -30,7 +41,7 @@ nav .logo {
 
 nav .logo a {
      text-decoration: none;
-     color: #000;
+     color: rgb(0, 153, 255);
 }
 
 nav .logo a:hover {
@@ -50,7 +61,7 @@ nav .links li {
 }
 
 nav .links li a {
-     color: #000;
+     color: rgb(0, 153, 255);
      text-decoration: none;
      font-size: 18px;
      font-weight: 500;
@@ -138,7 +149,7 @@ nav .links li a:hover {
 }
 
 .experience-item {
-     background-color: #fff;
+     backdrop-filter: blur(10px);
      width: 80%;
      border-radius: 20px;
      height: 100%;
@@ -198,7 +209,7 @@ h2 {
 .project-item {
      width: 80%;
      height: 100%;
-     background-color: #fff;
+     backdrop-filter: blur(10px);
      border-radius: 20px;
      display: flex;
      justify-content: center;
@@ -318,8 +329,8 @@ h2 {
      width: 10%;
      height: 100%;
      display: flex;
-     background-color: white;
      justify-content: center;
+     backdrop-filter: blur(10px);
      align-items: center;
      flex-direction: column;
      padding: 20px;
