--- a/Files/SimpleFolio/style.css
+++ b/Files/SimpleFolio/style.css
@@ -4,38 +4,19 @@
      box-sizing: border-box;
 }
 
-/* Body before background */
-body:before {
-     content: "";
-     position: fixed;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     background: url("images/back.jpg") no-repeat center center fixed;
-     background-size: cover;
-     z-index: -1;
-}
-
 body {
      font-family: 'Poppins', sans-serif;
-     min-width: 1180px;
 }
 
 /* Navbar */
-
 nav {
-     backdrop-filter: blur(10px);
      height: 80px;
-     width: 100%;
-     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 nav .logo {
      font-size: 30px;
      font-weight: 600;
-     line-height: 80px;
-     padding: 0 20px;
+     padding: 20px;
      float: left;
 }
 
@@ -46,7 +27,6 @@ nav .logo a {
 
 nav .logo a:hover {
      color: rgb(0, 153, 255);
-     transition: 0.5s;
      text-shadow: 1px 1px 20px #000000;
 }
 
@@ -71,7 +51,6 @@ nav .links li a {
 
 nav .links li a:hover {
      border-bottom: 5px solid rgb(0, 153, 255);
-     /* Animation left to right */
      transition: all 0.1s ease-in;
      color: rgb(0, 153, 255);
 }
@@ -79,9 +58,6 @@ nav .links li a:hover {
 /* Intro */
 
 .intro {
-     background-image: url(../images/hero.jpg);
-     background-size: cover;
-     background-position: center;
      height: 100vh;
      width: 100%;
      display: flex;
@@ -97,11 +73,10 @@ nav .links li a:hover {
      border-radius: 5px;
      text-decoration: none;
      font-size: 18px;
-     font-weight: 500;
      text-transform: uppercase;
      letter-spacing: 1px;
      margin-top: 20px;
-     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
      outline: none;
 }
 
@@ -115,32 +90,103 @@ nav .links li a:hover {
 }
 
 .name {
-     color: rgb(0, 153, 255);
+     color: rgb(0, 0, 0);
      font-size: 45px;
      font-weight: 600;
-     -webkit-text-stroke: 0.3bw #383d52;
      text-transform: uppercase;
 }
 
-.name {
-     color: black;
-     font-size: 45px;
-     font-weight: 600;
-}
-
-/* Name hover animation */
 .name:hover {
      color: rgb(0, 153, 255);
      transition: all 0.3s ease-in;
      text-shadow: 1px 1px black;
 }
 
+/* Education */
+
+
+.education {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+}
+
+.edu {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: row;
+     padding: 20px;
+}
+
+.eduleft {
+     float: left;
+     background-color: #fff;
+     padding: 20px;
+     border-radius: 60px;
+     margin-right: 20px;
+}
+
+.eduleft img {
+     width: 150px;
+     height: 150px;
+     border-radius: 50%;
+     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
+}
+
+.eduright {
+     float: right;
+     background-color: #fff;
+     display: flex;
+     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
+     border-radius: 30px;
+     flex-direction: column;
+
+}
+
+.clgname {
+     font-size: 20px;
+     font-weight: 600;
+     letter-spacing: 1px;
+     padding: 15px;
+     background-color: rgb(180, 180, 180);
+     border-top-left-radius: 30px;
+     border-top-right-radius: 30px;
+
+}
+
+.lef {
+     float: left;
+}
+
+.clg {
+     letter-spacing: 1px;
+     text-transform: uppercase;
+     font-size: 25px;
+}
+
+.rig {
+     float: right;
+}
+
+.info {
+     padding: 15px;
+}
+
+.info p {
+     padding: 5px;
+     font-size: 15px;
+     font-weight: 500;
+     letter-spacing: 1px;
+     margin: 3px;
+}
+
 /* Experience */
 
 .experience {
-     background-image: url(../images/hero.jpg);
-     background-size: cover;
-     background-position: center;
      width: 100%;
      display: flex;
      justify-content: center;
@@ -149,10 +195,8 @@ nav .links li a:hover {
 }
 
 .experience-item {
-     backdrop-filter: blur(10px);
      width: 80%;
      border-radius: 20px;
-     height: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
@@ -179,7 +223,6 @@ h2 {
 }
 
 .experience-item h4 {
-     color: #000;
      font-size: 20px;
      font-weight: 500;
      font-weight: bold;
@@ -188,7 +231,6 @@ h2 {
 }
 
 .experience-item p {
-     color: #000;
      font-size: 18px;
      margin: 2px;
 }
@@ -196,9 +238,6 @@ h2 {
 /* Projects */
 
 .projects {
-     background-image: url(../images/hero.jpg);
-     background-size: cover;
-     background-position: center;
      width: 100%;
      display: flex;
      justify-content: center;
@@ -208,33 +247,29 @@ h2 {
 
 .project-item {
      width: 80%;
-     height: 100%;
-     backdrop-filter: blur(10px);
      border-radius: 20px;
      display: flex;
      justify-content: center;
      align-items: center;
+     background-color: #fff;
      flex-direction: row;
      padding: 15px;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-     margin: 15px;
+     margin: 10px;
 }
 
 .left {
      width: 50%;
-     height: 100%;
 }
 
 .left img {
      width: 100%;
-     height: 100%;
-     object-fit: cover;
      border-radius: 15px;
+     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .right {
      width: 50%;
-     height: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
@@ -244,16 +279,15 @@ h2 {
 
 .right h3 {
      color: rgb(0, 153, 255);
-     font-size: 35px;
+     font-size: 28px;
      font-weight: 600;
-     text-shadow: 1px 1px 25px #000000;
+     text-transform: uppercase;
 }
 
 .right p {
      color: #000;
-     font-size: 20px;
+     font-size: 18px;
      font-weight: 500;
-     text-shadow: 1px 1px 25px #000000;
 }
 
 .tags {
@@ -266,15 +300,13 @@ h2 {
 
 .tags span {
      background-color: rgba(255, 255, 0, 0.504);
-     color: black;
      padding: 5px 20px;
      border-radius: 25px;
-     text-decoration: none;
-     font-size: 18px;
+     font-size: 15px;
      font-weight: 500;
      text-transform: uppercase;
      letter-spacing: 1px;
-     margin: 10px;
+     margin: 5px;
      outline: none;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
@@ -306,18 +338,15 @@ h2 {
 /* Techstacks */
 
 .stacks {
-     background-image: url(../images/hero.jpg);
-     background-size: cover;
-     background-position: center;
      width: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
+     padding: 30px;
 }
 
 .techstack {
-
      display: flex;
      justify-content: center;
      flex-wrap: wrap;
@@ -327,10 +356,8 @@ h2 {
 
 .stack {
      width: 10%;
-     height: 100%;
      display: flex;
      justify-content: center;
-     backdrop-filter: blur(10px);
      align-items: center;
      flex-direction: column;
      padding: 20px;
@@ -342,7 +369,6 @@ h2 {
 .stack img {
      width: 50px;
      height: 50px;
-     object-fit: cover;
      margin: 10px;
 }
 
@@ -356,9 +382,6 @@ h2 {
 /* Contact Us */
 
 .contact {
-     background-image: url(../images/hero.jpg);
-     background-size: cover;
-     background-position: center;
      width: 100%;
      display: flex;
      justify-content: center;
@@ -375,7 +398,6 @@ h2 {
 .iconbtn {
      padding: 10px;
      width: 100px;
-     height: 100px;
      text-decoration: none;
      font-size: 30px;
      background-color: black;
@@ -390,7 +412,7 @@ h2 {
 .iconbtn:hover {
      background-color: rgb(0, 153, 255);
      color: white;
-     transition: all 0.3s ease-in;
+     transition: all 0.2s ease-in;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
      outline: none;
      border: none;
@@ -399,9 +421,8 @@ h2 {
 .line {
      width: 5%;
      height: 5px;
-     background-color: rgb(3, 68, 197);
+     background-color: rgb(0, 153, 255);
      margin-bottom: 20px;
-
 }
 
 footer {
