--- a/Files/SimpleFolio/style.css
+++ b/Files/SimpleFolio/style.css
@@ -184,6 +184,61 @@ nav .links li a:hover {
      margin: 3px;
 }
 
+/* Certificate  */
+
+.certificate {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+}
+
+.certi {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: row;
+     flex-wrap: wrap;
+}
+
+.certificate-item {
+     width: 20%;
+     margin: 20px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+     border-radius: 18px;
+     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
+}
+
+.certificate-item img {
+     width: 100%;
+     border-top-left-radius: 18px;
+     border-top-right-radius: 18px;
+     box-shadow: 0 8px 6px -6px rgb(141, 140, 140);
+
+}
+
+.certificate-info {
+     padding: 15px;
+}
+
+.course-name {
+     font-size: 18px;
+     font-weight: 500;
+     text-align: center;
+}
+
+.provider {
+     font-size: 16px;
+     text-align: center;
+     font-weight: 400;
+     color: rgb(102, 101, 98);
+}
+
 /* Experience */
 
 .experience {
