--- a/Files/SimpleFolio/style.css
+++ b/Files/SimpleFolio/style.css
@@ -83,7 +83,7 @@ nav .links li a:hover {
 .btn:hover {
      background-color: #fff;
      color: rgb(0, 153, 255);
-     transition: all 0.3s ease-in;
+     transition: all 0.25s ease-in-out;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
      outline: none;
      border: none;
